--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
     - docker
 
-before_install:
+run:
     - docker build -t ericsojohansson/react-test -f ./client/Dockerfile.dev ./client
 
 scripts:
