--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,19 @@
 version: 2
 jobs:
-    steps:
-      - run:
-          name: build-client
-          command: docker build -t ericsojohansson/react-test -f ./client/Dockerfile.dev ./client
-      - run:
-          name: run-test
-          command: docker run -e CI=true ericsojohansson/react-test npm test -- --coverage
-      - run:
-          name: build-containers
-          command: docker build -t ericsojohansson/multi-client -f ./client && docker build -t ericsojohansson/multi-nginx -f ./nginx && docker build -t ericsojohansson/multi-server -f ./server && docker build -t ericsojohansson/multi-worker -f ./worker
-      - run:
-          name: docker-login
-          command: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-      - run:
-        name: push-containers
-        command: docker push ericsojohansson/multi-client && docker push ericsojohansson/multi-nginx && docker push ericsojohansson/multi-server && docker push ericsojohansson/multi-worker
+    one:
+        steps:
+            - run:
+                name: build-client
+                command: docker build -t ericsojohansson/react-test -f ./client/Dockerfile.dev ./client
+            - run:
+                name: run-test
+                command: docker run -e CI=true ericsojohansson/react-test npm test -- --coverage
+            - run:
+                name: build-containers
+                command: docker build -t ericsojohansson/multi-client -f ./client && docker build -t ericsojohansson/multi-nginx -f ./nginx && docker build -t ericsojohansson/multi-server -f ./server && docker build -t ericsojohansson/multi-worker -f ./worker
+            - run:
+                name: docker-login
+                command: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+            - run:
+                name: push-containers
+                command: docker push ericsojohansson/multi-client && docker push ericsojohansson/multi-nginx && docker push ericsojohansson/multi-server && docker push ericsojohansson/multi-worker
