--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2
 jobs:
     one:
+        docker:
+            - image: circleci/ruby:2.4.1
         steps:
             - run:
                 name: build-client
