--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ scripts:
     - docker run -e CI=true ericsojohansson/react-test npm test -- --coverage
 
 after_success:
-    - docker build -t ericsojohansson/multi-client -f ./client
-    - docker build -t ericsojohansson/multi-nginx -f ./nginx
-    - docker build -t ericsojohansson/multi-server -f ./server
-    - docker build -t ericsojohansson/multi-worker -f ./worker
+    - docker build -t ericsojohansson/multi-client ./client
+    - docker build -t ericsojohansson/multi-nginx ./nginx
+    - docker build -t ericsojohansson/multi-server ./server
+    - docker build -t ericsojohansson/multi-worker ./worker
 
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
